--- a/supply/templates/registration/registration_form.html
+++ b/supply/templates/registration/registration_form.html
@@ -1,4 +1,6 @@
-{%extends "registration/base.html"%} {% load bootstrap3 %}{% load static %}
+{%extends "../base.html"%}
+{% load bootstrap3 %}
+{% load static %}
 {% block content %}
 <div class="container">
     <div class="row">
@@ -35,9 +37,9 @@
                         <hr>
                         <h4 class="text-center text-muted pull-left">Already have an account?</h4>
                         <a href="/accounts/login" class="btn btn-primary btn-md text-center">Log In</a>
-    
+
                     </div>
-    
+
                 </div>
             </div>
         </div>
