create contact page --WIP

--- a/supply/templates/contact.html
+++ b/supply/templates/contact.html
@@ -1,4 +1,4 @@
-{% extends 'all-supply/base.html'%}
+{% extends 'base.html' %}
 {% block content %}
 
 <div class="container">
@@ -40,7 +40,7 @@
           <input type="submit" class="btn btn-dark" value="Send Message">
         </div>
       </div>
-      
+
     </form>
   </div>
   {% endblock %}
