--- a/supply/templates/navbar.html
+++ b/supply/templates/navbar.html
@@ -1,26 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-</head>
-
-<body>
-
-   
 <!--Navbar -->
 <nav class=" navbar navbar-expand-md navbar-light blue-text" style="color:white;">
   <div class="navbar-brand" style="background:#000000;opacity:0.85;padding:10px;color:white;">
-    <a href="/c" style="color:white;"><h4 ><i class="fas fa-home"></i> ZOHARI SUPPPLIERS </h4></a>
+    <a href="/" style="color:white;"><h4 ><i class="fas fa-home"></i> ZOHARI SUPPPLIERS </h4></a>
   </div>
   <div class="nav-search">
       <form class="form-inline md-form form-md active-pink active-pink-2 mt-2" action="">
         <i class="fas fa-search" aria-hidden="true"></i>
         <input class="form-control form-control-md ml-3 w-75" type="text" placeholder="Search Equipment" aria-label="Search "
           name="equipment">
-      </form> 
-    </div> 
+      </form>
+    </div>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-4"
     aria-controls="navbarSupportedContent-4" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -36,12 +25,12 @@
            Contacts</a>
       </li>
       {% if user.is_authenticated %}
-      
+
       <li class="nav-item">
             <a class="nav-link" href="/admin"  >
                Admin</a>
           </li>
-  
+
           <li class="nav-item">
               <a class="nav-link" href="{% url 'profile' username=user %}">
                   Profile</a>
@@ -57,10 +46,7 @@
                   </a>
                 </li>
           {% endif %}
-     
+
     </ul>
   </div>
 </nav>
-</body>
-
-</html>
