--- a/supply/templates/navbar.html
+++ b/supply/templates/navbar.html
@@ -1,4 +1,5 @@
 <!--Navbar -->
+{% load cart_total %}
 <nav class=" navbar navbar-expand-md navbar-light blue-text" style="color:white;">
   <div class="navbar-brand" style="background:#000000;opacity:0.85;padding:10px;color:white;">
     <a href="/" style="color:white;"><h4 ><i class="fas fa-home"></i> ZOHARI SUPPPLIERS </h4></a>
@@ -34,6 +35,12 @@
           <li class="nav-item">
               <a class="nav-link" href="{% url 'profile' username=user %}">
                   Profile</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'cart:cart-home' %}">
+                  <i class="fa fa-shopping-cart"></i> Cart
+                  <span class="badge badge-light">{{ request.user| cart_total }}</span>
+                </a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="/logout/">
