--- a/cart/templates/cart/home.html
+++ b/cart/templates/cart/home.html
@@ -1,39 +1,42 @@
-{% extends 'products/base.html' %} {% block content %}
+{% extends '../base.html' %}
+
+{% block content %}
 <div class="container my-5">
-    <div class="my-5">
-        <h2>You Cart</h2>
-    </div>
-    <table class="table table-hover">
-        <thead>
-            <tr>
-                <th scope="col">#</th>
-                <th scope="col">Product Name</th>
-                <th scope="col">Quantity</th>
-                <th scope="col">Price</th>
-            </tr>
-        </thead>
-        <tbody>
-            {% for cart in carts %}
-            <tr>
-                <th scope="row">{{ forloop.counter }}</th>
-                <td>{{ cart.item.name }}</td>
-                <td>{{ cart.quantity }}</td>
-                <td>$ Total </td>
-            </tr>
-            {% endfor %}
-            <tr>
-                <th scope="row"></th>
-                <td colspan="2">Total</td>
-                <td>$10000</td>
-            </tr>
-            <tr>
-                <th scope="row"></th>
-                <td colspan="3" class="text-right ">
-                    <button class="btn btn-success mr-4">Proceed To Checkout</button>
-                </td>
-            </tr>
-        </tbody>
-    </table>
+<div class="my-5">
+	<h2>You Cart</h2>
+</div>
+<table class="table table-hover">
+  <thead>
+    <tr>
+      <th scope="col">#</th>
+      <th scope="col">Product Name</th>
+      <th scope="col">Quantity</th>
+      <th scope="col">Price</th>
+    </tr>
+  </thead>
+  <tbody>
+  	{% for cart in carts %}
+    <tr>
+      <th scope="row">{{ forloop.counter }}</th>
+      <td>{{ cart.item.item_name }}</td>
+      <td>{{ cart.quantity }}</td>
+      <td>${{ cart.get_total }}</td>
+    </tr>
+	{% endfor %}
+    <tr>
+      <th scope="row"></th>
+      <td colspan="2">Total</td>
+      <td>{{ order.get_totals| floatformat }}</td>
+    </tr>
+    <tr>
+      <th scope="row"></th>
+      <td colspan="3" class="text-right ">
+        <button class="btn btn-warning mr-4">Continue Shoping</button>
+        <button class="btn btn-success mr-4">Proceed To Checkout</button>
+      </td>
+    </tr>
+  </tbody>
+</table>
 </div>
 
 {% endblock %}
