--- a/supply/templates/base.html
+++ b/supply/templates/base.html
@@ -43,6 +43,18 @@
 
 <body>
     {% include 'navbar.html' %}
+    {% if messages %}
+    <div class="messages container mt-2">
+        {% for message in messages %}
+        <div {% if message.tags %} class="alert alert-{{ message.tags }}{% endif %}" role="alert">
+          {{ message }}
+          <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+      </button>
+        </div>
+        {% endfor %}
+    </div>
+  {% endif %}
     {% block content %}
 
     {%endblock%}
