--- a/supply/templates/layouts/navbar.html
+++ b/supply/templates/layouts/navbar.html
@@ -1,5 +1,30 @@
 <!--Navbar -->
 {% load cart_total %}
+<div class="header_top"><!--header_top-->
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-6">
+                <div class="contactinfo">
+                    <ul class="nav nav-pills">
+                        <li><a href="#"><i class="fa fa-phone"></i> +2 95 01 88 821</a></li>
+                        <li><a href="#"><i class="fa fa-envelope"></i> info@domain.com</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="col-sm-6">
+                <div class="social-icons pull-right">
+                    <ul class="nav navbar-nav">
+                        <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                        <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                        <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                        <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
+                        <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+</div><!--/header_top-->
 <nav class=" navbar navbar-expand-md navbar-light blue-text" style="color:white;">
   <div class="navbar-brand" style="background:#000000;opacity:0.85;padding:10px;color:white;">
     <a href="/" style="color:white;"><h4 ><i class="fas fa-home"></i> ZOHARI SUPPPLIERS </h4></a>
@@ -37,7 +62,7 @@
                   Profile</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="{% url 'cart:cart-home' %}">
+                <a class="nav-link" href="{% url 'cart-home' %}">
                   <i class="fa fa-shopping-cart"></i> Cart
                   <span class="badge badge-light">{{ request.user| cart_total }}</span>
                 </a>
