renamed from supply --WIP

--- a/frontend/templates/contact.html
+++ b/frontend/templates/contact.html
@@ -1,7 +1,9 @@
 {% extends 'base.html' %}
 {% block content %}
 
+
 <div class="container">
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3988.501228957554!2d36.96109871563071!3d-1.4722479989263018!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x182f9ffa985f930f%3A0xa0fefcd3ded89f54!2sKitengela%20Medical%20Services!5e0!3m2!1sen!2ske!4v1581687626494!5m2!1sen!2ske" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
     <div class="row">
       <div class="col-12 mb-5 position-relative">
         <h2 class="section-title text-center text-white mb-5">Say Hello</h2>
