--- a/frontend/templates/layouts/navbar.html
+++ b/frontend/templates/layouts/navbar.html
@@ -11,21 +11,10 @@
                     </ul>
                 </div>
             </div>
-            <div class="col-sm-6">
-                <div class="social-icons pull-right">
-                    <ul class="nav navbar-nav">
-                        <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                        <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                        <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                        <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
-                        <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-                    </ul>
-                </div>
-            </div>
         </div>
     </div>
 </div><!--/header_top-->
-<nav class=" navbar navbar-expand-md navbar-light blue-text" style="color:white;">
+<nav class=" navbar navbar-expand-md navbar-light blue-text navbar-fixed-top" style="color:white;">
   <div class="navbar-brand" style="background:#000000;opacity:0.85;padding:10px;color:white;">
     <a href="/" style="color:white;"><h4 ><i class="fas fa-home"></i> ZOHARI SUPPPLIERS </h4></a>
   </div>
