--- a/cart/templates/base.html
+++ b/cart/templates/base.html
@@ -42,7 +42,7 @@
 </head>
 
 <body>
-    {% include 'navbar.html' %}
+    {% include 'layouts/navbar.html' %}
     {% block content %}
 
     {%endblock%}
