--- a/frontend/templates/layouts/navbar.html
+++ b/frontend/templates/layouts/navbar.html
@@ -42,7 +42,7 @@
       {% if user.is_authenticated %}
 
       <li class="nav-item">
-            <a class="nav-link" href="/admin"  >
+            <a class="nav-link" href="/d"  >
                Admin</a>
           </li>
 
