--- a/shop/templates/layouts/navbar.html
+++ b/shop/templates/layouts/navbar.html
@@ -1,91 +1,92 @@
-  <header class="main_menu home_menu">
-    <div class="container-fluid">
-      <div class="row align-items-center justify-content-center">
-        <div class="col-lg-11">
-          <nav class="navbar navbar-expand-lg navbar-light">
-            <a class="navbar-brand" href="index.html"> Zohari Suppliers </a>
-            <!-- <a class="navbar-brand" href="index.html"> <img src="img/logo.png" alt="logo"> </a> -->
+<header class="main_menu home_menu">
+  <div class="container-fluid">
+    <div class="row align-items-center justify-content-center">
+      <div class="col-lg-11">
+        <nav class="navbar navbar-expand-lg navbar-light">
+          <a class="navbar-brand" href="{% url 'landing_page' %}""> Zohari Suppliers </a>
+            <!-- <a class=" navbar-brand" href="index.html"> <img src="img/logo.png" alt="logo"> </a> -->
 
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-              aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="menu_icon"><i class="fas fa-bars"></i></span>
-            </button>
-            <div class="collapse navbar-collapse main-menu-item" id="navbarSupportedContent">
-              <ul class="navbar-nav">
-                <li class="nav-item">
-                  <a class="nav-link" href="index.html">Shop</a>
-                </li>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="menu_icon"><i class="fas fa-bars"></i></span>
+          </button>
+          <div class="collapse navbar-collapse main-menu-item" id="navbarSupportedContent">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'about' %}">Shop</a>
+              </li>
 
-                <li class="nav-item">
-                  <a class="nav-link" href="index.html">About</a>
-                </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'about' %}">About</a>
+              </li>
 
-                <li class="nav-item">
-                  <a class="nav-link" href="index.html">Contact</a>
-                </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'contact' %}">Contact</a>
+              </li>
 
-                <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="blog.html" id="navbarDropdown_1" role="button"
-                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Shop
-                  </a>
-                  <div class="dropdown-menu" aria-labelledby="navbarDropdown_1">
-                    <a class="dropdown-item" href="category.html"> shop category</a>
-                    <a class="dropdown-item" href="single-product.html">product details</a>
-                  </div>
-                </li>
-                <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="blog.html" id="navbarDropdown_3" role="button"
-                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    pages
-                  </a>
-                  <div class="dropdown-menu" aria-labelledby="navbarDropdown_2">
-                    <a class="dropdown-item" href="login.html">
-                      login
-                    </a>
-                    <a class="dropdown-item" href="tracking.html">tracking</a>
-                    <a class="dropdown-item" href="checkout.html">product checkout</a>
-                    <a class="dropdown-item" href="cart.html">shopping cart</a>
-                    <a class="dropdown-item" href="confirmation.html">confirmation</a>
-                    <a class="dropdown-item" href="elements.html">elements</a>
-                  </div>
-                </li>
-                <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="blog.html" id="navbarDropdown_2" role="button"
-                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    blog
-                  </a>
-                  <div class="dropdown-menu" aria-labelledby="navbarDropdown_2">
-                    <a class="dropdown-item" href="blog.html"> blog</a>
-                    <a class="dropdown-item" href="single-blog.html">Single blog</a>
-                  </div>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="contact.html">Contact</a>
-                </li>
-              </ul>
-            </div>
-            <div class="hearer_icon d-flex">
-              <div class="dropdown cart">
-                <a class="dropdown-toggle" href="#" id="navbarDropdown3" role="button" data-toggle="dropdown"
-                  aria-haspopup="true" aria-expanded="false">
-                  <i class="ti-bag"></i>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="blog.html" id="navbarDropdown_1" role="button"
+                  data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  Shop
                 </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown_1">
+                  <a class="dropdown-item" href="category.html"> shop category</a>
+                  <a class="dropdown-item" href="single-product.html">product details</a>
+                </div>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="blog.html" id="navbarDropdown_3" role="button"
+                  data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  pages
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown_2">
+                  <a class="dropdown-item" href="{% url 'login' %}?next={{request.path}}">
+                    login
+                  </a>
+                  <a class="dropdown-item" href="tracking.html">tracking</a>
+                  <a class="dropdown-item" href="checkout.html">product checkout</a>
+                  <a class="dropdown-item" href="{% url 'about' %}">shopping cart</a>
+                  <a class="dropdown-item" href="confirmation.html">confirmation</a>
+                  <a class="dropdown-item" href="elements.html">elements</a>
+                </div>
+              </li>
 
-              </div>
-              <a id="search_1" href="javascript:void(0)"><i class="ti-search"></i></a>
+              <li class="nav-item">
+                <a class="nav-link" href="contact.html">Contact</a>
+              </li>
+            </ul>
+          </div>
+          <div class="hearer_icon d-flex">
+            <div class="dropdown cart">
+              <a class="dropdown-toggle" href="#" id="navbarDropdown3" role="button" data-toggle="dropdown"
+                aria-haspopup="true" aria-expanded="false">
+                <i class="ti-bag"></i>
+              </a>
+
             </div>
-          </nav>
-        </div>
+            <a id="search_1" href="#" onclick="toggle('search_input_box')"><i class="ti-search"></i></a>
+          </div>
+        </nav>
       </div>
     </div>
-    <div class="search_input" id="search_input_box">
-      <div class="container ">
-        <form class="d-flex justify-content-between search-inner">
-          <input type="text" class="form-control" id="search_input" placeholder="Search Here">
-          <button type="submit" class="btn"></button>
-          <span class="ti-close" id="close_search" title="Close Search"></span>
-        </form>
-      </div>
+  </div>
+  <div class="search_input" id="search_input_box" style="display: none;">
+    <div class="container ">
+      <form class="d-flex justify-content-between search-inner" action="{% url 'search_results' %}" method="get">
+        <input type="text" class="form-control" id="search_input" placeholder="Search Here" name="q">
+        <button type="submit" class="btn"></button>
+        <span class="ti-close" id="close_search" title="Close Search" onclick="toggle('search_input_box')"></span>
+      </form>
     </div>
-  </header>
+  </div>
+</header>
+<script language="JavaScript">
+  function toggle(id) {
+    var state = document.getElementById(id).style.display;
+    if (state == 'block') {
+      document.getElementById(id).style.display = 'none';
+    } else {
+      document.getElementById(id).style.display = 'block';
+    }
+  } 
+</script>
