called and initialized wow animate

--- a/shop/templates/base.html
+++ b/shop/templates/base.html
@@ -76,6 +76,7 @@
         <script src="{% static 'js/mail-script.js' %}" type="1e3b28d619e1140858d3c390-text/javascript"></script>
         <script src="{% static 'js/custom.js' %}" type="1e3b28d619e1140858d3c390-text/javascript"></script>
         <script src="{% static 'js/rocket-loader.min.js' %}" type="1e3b28d619e1140858d3c390-text/javascript"></script>
+        <script src="{% static 'js/wow.min.js' %}"></script>
 
         <script>
             new WOW().init();
