added products styles

--- a/shop/templates/base.html
+++ b/shop/templates/base.html
@@ -27,6 +27,7 @@
         <link href="{% static 'css/magnific-popup.css' %}" rel="stylesheet">
         <link href="{% static 'css/slick.css' %}" rel="stylesheet">
         <link href="{% static 'css/style.css' %}" rel="stylesheet">
+        <link href="{% static 'css/product_list.css' %}" rel="stylesheet">
 
     {% endblock %}
 
