--- a/shop/templates/product/index.html
+++ b/shop/templates/product/index.html
@@ -1,78 +1,126 @@
 {% extends '../base.html' %}
 {% block content %}
-
-      <section class="banner_part">
-    <div class="container">
-      <div class="row align-items-center">
-        <div class="col-lg-7">
-          <div class="banner_slider">
-            <div class="single_banner_slider">
-              <div class="banner_text">
-                <div class="banner_text_iner">
-                  <h5>Winter Fasion</h5>
-                  <h1>Fashion Collection 2019</h1>
-                  <a href="#" class="btn_1">shop now</a>
-                </div>
+<section class="banner_part">
+  <div class="container">
+    <div class="row align-items-center">
+      <div class="col-lg-7">
+        <div class="banner_slider">
+          <div class="single_banner_slider">
+            <div class="banner_text">
+              <div class="banner_text_iner">
+                <!-- <h5>Winter Fasion</h5> -->
+                <h1>Fashion Collection</h1>
+                <a href="#" class="btn_1">shop now</a>
               </div>
             </div>
           </div>
         </div>
       </div>
     </div>
-  </section>
+  </div>
+</section>
 
 <section>
-    <div class="container">
+  <div class="container">
+    <div class="row">
+
+
+      <div class="col-sm-9 padding-right padding-top">
+        <h1>Featured Items</h1>
+
+
         <div class="row">
+          {% for product in object_list %}
+          {% if product.is_item_featured %}
+          <div class="col-md-3">
+            <!-- Card Regular -->
+            <div class="card card-cascade">
+
+              <!-- Card image -->
+              <div class="view view-cascade overlay">
+                <div class="card-img-top">
+                  <img class="img-responsive" src="{{ product.item_images.image.url }}" alt="{{ product.item_name }}">
+
+                </div>
+                <a href="product/{{ product.slug }}">
+                  <div class="mask rgba-white-slight"></div>
+                </a>
+              </div>
+
+              <!-- Card content -->
+              <div class="card-body card-body-cascade text-center">
+
+                <!-- Title -->
+                <h4 class="card-title"><strong>{{ product.item_name }}</strong></h4>
+                <!-- Subtitle -->
+                <h6 class="font-weight-bold indigo-text py-2">{{ product.brand_name }}</h6>
+                <!-- Text -->
+                <p class="card-text">
+                  {{ product.item_description }}
+                </p>
+
+                <a href="cart/{{ product.slug }}" class="btn btn-success"><i class="fas fa-shopping-cart"></i> Add to
+                  Cart</a>
+
+              </div>
+
+            </div>
+          </div>
+          <!-- Card Regular -->
+          {% endif %}
+          {% endfor %}
+        </div>
+      </div>
+
+      <div class="col-sm-9 padding-right padding-top">
+        <h1>Recommended Items</h1>
 
 
-            <div class="col-sm-9 padding-right padding-top">
-            <h1>Featured Items</h1>
-
-
-                <div class="row" >
-                    {% for product in object_list %}
-                        <div class="col-md-3">
-                            <!-- Card Regular -->
-                            <div class="card card-cascade">
-
-                              <!-- Card image -->
-                              <div class="view view-cascade overlay">
-                                  <div class="card-img-top" style="background: url({{ product.images.url }}); display: block;" alt="{{ product.item_name }}">
-
-                                  </div>
-                                <a href="product/{{ product.slug }}">
-                                  <div class="mask rgba-white-slight"></div>
-                                </a>
-                              </div>
-
-                              <!-- Card content -->
-                              <div class="card-body card-body-cascade text-center">
-
-                                <!-- Title -->
-                                <h4 class="card-title"><strong>{{ product.item_name }}</strong></h4>
-                                <!-- Subtitle -->
-                                <h6 class="font-weight-bold indigo-text py-2">{{ product.brand_name }}</h6>
-                                <!-- Text -->
-                                <p class="card-text">
-                                    {{ product.item_description }}
-                                </p>
-
-                              <a href="cart/{{ product.slug }}" class="btn btn-success"><i class="fas fa-shopping-cart"></i> Add to Cart</a>
-
-                              </div>
-
-                            </div>
-                        </div>
-                        <!-- Card Regular -->
-                    {% endfor %}
+        <div class="row">
+          {% for product in object_list %}
+          {% if product.is_item_recommended %}
+          <div class="col-md-3 col-sm-6">
+            <div class="product-grid">
+                <div class="product-image">
+                    <a href="#">
+                        <img class="pic-1" src="http://bestjquery.com/tutorial/product-grid/demo9/images/img-2.jpg">
+                        <img class="pic-2" src="{{ product.item_images.image.url }}">
+                    </a>
+                    <ul class="social">
+                        <li><a href="" data-tip="Quick View"><i class="fa fa-search"></i></a></li>
+                        <li><a href="product/{{ product.slug }}" data-tip="View Details"><i class="fa fa-shopping-bag"></i></a></li>
+                        <li><a href="" data-tip="Add to Cart"><i class="fa fa-shopping-cart"></i></a></li>
+                    </ul>
+                    <span class="product-new-label">Recommended</span>
+                    <!-- <span class="product-discount-label">20%</span> -->
+                </div>
+                <ul class="rating">
+                    <li class="fa fa-star"></li>
+                    <li class="fa fa-star"></li>
+                    <li class="fa fa-star"></li>
+                    <li class="fa fa-star"></li>
+                    <li class="fa fa-star disable"></li>
+                </ul>
+                <div class="product-content">
+                    <h3 class="title"><a href="#">{{ product.item_name }}</a></h3>
+                    <div class="price">Kshs. {{ product.item_price }}
+                        <!-- <span>$20.00</span> -->
+                    </div>
+                    <a class="add-to-cart" href="cart/{{ product.slug }}">+ Add To Cart</a>
                 </div>
             </div>
         </div>
+          {% endif %}
+          {% endfor %}
+        </div>
+      </div>
+
+
+
     </div>
+  </div>
 </section>
 
 
 
 {% endblock %}
-
