updated product details

--- a/shop/templates/product/index.html
+++ b/shop/templates/product/index.html
@@ -39,7 +39,7 @@
               <!-- Card image -->
               <div class="view view-cascade overlay">
                 <div class="card-img-top">
-                  <img class="img-responsive" src="{{ product.item_images.image.url }}" alt="{{ product.item_name }}">
+                  <img class="img-responsive" src="{{ product.image.url }}" alt="{{ product.item_name }}">
 
                 </div>
                 <a href="product/{{ product.slug }}">
