--- a/shop/templates/product/index.html
+++ b/shop/templates/product/index.html
@@ -10,7 +10,7 @@
               <div class="banner_text_iner">
                 <!-- <h5>Winter Fasion</h5> -->
                 <h1>Fashion Collection</h1>
-                <a href="#" class="btn_1">shop now</a>
+                <a href="{% url 'product-list' %}" class="btn_1">shop now</a>
               </div>
             </div>
           </div>
