--- a/cart/templates/layouts/navbar.html
+++ b/cart/templates/layouts/navbar.html
@@ -27,7 +27,7 @@
                 <a class="nav-link" href="{% url 'contact' %}">Contact</a>
               </li>
 
-              <li class="nav-item dropdown">
+              <!-- <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="blog.html" id="navbarDropdown_1" role="button"
                   data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                   Shop
@@ -36,7 +36,7 @@
                   <a class="dropdown-item" href="category.html"> shop category</a>
                   <a class="dropdown-item" href="single-product.html">product details</a>
                 </div>
-              </li>
+              </li> -->
               {% if user.is_authenticated %}
 
               <li class="nav-item">
@@ -55,12 +55,12 @@
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/logout/">
+                <a class="nav-link" href="{% url 'logout' %}?next={{request.path}}">
                   Log Out</a>
               </li>
               {% else %}
               <li class="nav-item active">
-                <a class="nav-link" href="accounts/login">
+                <a class="nav-link" href="{% url 'login' %}?next={{request.path}}">
                   Login/Register
                 </a>
               </li>
@@ -70,7 +70,13 @@
 
 
           <div class="hearer_icon d-flex">
-            
+            <div class="dropdown cart">
+              <a class="dropdown-toggle" href="#" id="navbarDropdown3" role="button" data-toggle="dropdown"
+                aria-haspopup="true" aria-expanded="false">
+                <i class="ti-bag"></i>
+              </a>
+
+            </div>
             <a id="search_1" href="#" onclick="toggle('search_input_box')"><i class="ti-search"></i></a>
           </div>
         </nav>
