changed products look and updated registration form --WIP

--- a/shop/templates/product/product_detail.html
+++ b/shop/templates/product/product_detail.html
@@ -9,7 +9,7 @@
 			<aside class="col-sm-5 border-right">
 				<article class="gallery-wrap">
 					<div class="img-big-wrap">
-						<div> <a href="#"><img src="{{ object.image.url }}" style="width: 450px"></a></div>
+						<div> <a href="#"><img src="{{ object.item_image.url }}" style="width: 450px"></a></div>
 					</div> <!-- slider-product.// -->
 				</article> <!-- gallery-wrap .end// -->
 			</aside>
