--- a/shop/templates/product/index.html
+++ b/shop/templates/product/index.html
@@ -1,16 +1,69 @@
 {% extends '../base.html' %}
 {% block content %}
+{% load static %}
+
+<style>
+  .white {
+    color: white;
+  }
+
+  .center {
+    text-align: center;
+    padding-top: 20px;
+  }
+
+  .ban {
+    background-color: rgba(0, 0, 0, 0.5) !important;
+  }
+
+  #slider-animation {
+    max-height: 550px;
+  }
+
+  .carousel-item img {
+    width: 100%;
+    height: 50%;
+  }
+
+  .text-box {
+    position: absolute;
+    top: 50%;
+    left: 15%;
+    right: 15%;
+    color: #000;
+    transform: translateY(-50%);
+  }
+
+  .recommended {
+    padding-top: 20px;
+    text-align: center;
+  }
+
+  @media screen and (max-width:650px) {
+
+    /* smartphones, Android phones, landscape iPhone */
+    .carousel-item img {
+      height: 400px;
+    }
+
+    .recommended {
+      padding-top: 20px;
+    }
+  }
+</style>
 <section class="banner_part">
-  <div class="container">
-    <div class="row align-items-center">
-      <div class="col-lg-7">
-        <div class="banner_slider">
-          <div class="single_banner_slider">
-            <div class="banner_text">
-              <div class="banner_text_iner">
-                <!-- <h5>Winter Fasion</h5> -->
-                <h1>Fashion Collection</h1>
-                <a href="{% url 'product-list' %}" class="btn_1">shop now</a>
+  <div class="ban">
+    <div class="container">
+      <div class="row align-items-center">
+        <div class="col-lg-7">
+          <div class="banner_slider">
+            <div class="single_banner_slider">
+              <div class="banner_text">
+                <div class="banner_text_iner">
+                  <h5 class="white">Score your basketball attire and equipment</h5>
+                  <h1 class="white">Basketball Collection</h1>
+                  <a href="{% url 'product-list' %}" class="btn_1">shop now</a>
+                </div>
               </div>
             </div>
           </div>
@@ -19,81 +72,159 @@
     </div>
   </div>
 </section>
-
-<section>
+<section class="padding-top">
   <div class="container">
+
+    <!-- <div class="col-sm-9 padding-right padding-top"> -->
+    <h1 class="center">Featured Items</h1>
+
+
     <div class="row">
+      {% for product in object_list %}
+      {% if product.is_item_featured %}
+      <div class="col-md-3 col-sm-6">
+        <div class="product-grid4">
+          <div class="product-image4">
+            <a href="">
+              <!-- <img src="{{ product.item_brand.brand_image.url }}" alt="{{ product.item_brand.brand_name }}" width="30px"> -->
 
-
-      <div class="col-sm-9 padding-right padding-top">
-        <h1>Featured Items</h1>
-
-
-        <div class="row">
-          {% for product in object_list %}
-          {% if product.is_item_featured %}
-          <div class="col-md-3 col-sm-6">
-            <div class="product-grid2">
-                <div class="product-image2">
-                    <a href="product/{{ product.slug }}">
-                        <img class="pic-1" src="http://bestjquery.com/tutorial/product-grid/demo3/images/img-3.jpeg">
-                        <img class="pic-2" src="http://bestjquery.com/tutorial/product-grid/demo3/images/img-4.jpeg">
-                    </a>
-                    <ul class="social">
-                        <li><a href="product/{{ product.slug }}" data-tip="Quick View"><i class="fa fa-eye"></i></a>
-                        </li>
-                    </ul>
-                    <a class="add-to-cart" href="{% url 'add-to-cart' product.slug %}"><i class="fa fa-shopping-cart"></i> Add to cart</a>
-                </div>
-                <div class="product-content">
-                    <h3 class="title"><a href="#">{{ product.item_name }}</a></h3>
-                    <span class="price">Kshs. {{ product.item_price }}</span>
-                </div>
+              <img class="pic-1" src="{{ product.item_image.url }}" alt="{{ product.item_name }}">
+            </a>
+            <span class="product-new-label">Featured</span>
+            <!-- <span class="product-discount-label">-10%</span> -->
+          </div>
+          <div class="product-content">
+            <h3 class="title"><a href="#">{{ product.item_name }}</a></h3>
+            <div class="price">
+              Kshs. {{product.item_price }}
+              <!-- <span>$16.00</span> -->
             </div>
-        </div>
-          <!-- Card Regular -->
-          {% endif %}
-          {% endfor %}
+            <a class="add-to-cart" href="{% url 'add-to-cart' product.slug %}">ADD TO CART</a>
+          </div>
         </div>
       </div>
 
-      <div class="col-sm-9 padding-right padding-top">
-        <h1>Recommended Items</h1>
-
-
-        <div class="row">
-          {% for product in object_list %}
-          {% if product.is_item_recommended %}
-          <div class="col-md-3 col-sm-6">
-            <div class="product-grid2">
-                <div class="product-image2">
-                    <a href="product/{{ product.slug }}">
-                        <img class="pic-1" src="http://bestjquery.com/tutorial/product-grid/demo3/images/img-3.jpeg">
-                        <img class="pic-2" src="http://bestjquery.com/tutorial/product-grid/demo3/images/img-4.jpeg">
-                    </a>
-                    <ul class="social">
-                        <li><a href="product/{{ product.slug }}" data-tip="Quick View"><i class="fa fa-eye"></i></a>
-                        </li>
-                    </ul>
-                    <a class="add-to-cart" href="{% url 'add-to-cart' product.slug %}"><i class="fa fa-shopping-cart"></i> Add to cart</a>
-                </div>
-                <div class="product-content">
-                    <h3 class="title"><a href="#">{{ product.item_name }}</a></h3>
-                    <span class="price">Kshs. {{ product.item_price }}</span>
-                </div>
-            </div>
-        </div>
-          {% endif %}
-          {% endfor %}
-        </div>
-      </div>
-
-
-
+      <!-- Card Regular -->
+      {% endif %}
+      {% endfor %}
     </div>
+    <!-- </div> -->
+
   </div>
 </section>
+<section>
+  <div id="slider-animation" class="carousel slide" data-ride="carousel">
 
+    <!-- Indicators -->
+
+
+    <!-- The slideshow -->
+    <div class="carousel-inner">
+
+      <div class="carousel-item active">
+        <img src="{% static 'img/hockey_game.jpg'%}" alt="Los Angeles">
+        <div class="text-box">
+          <div class="row align-items-center">
+
+            <div class="col-md-6">
+              <h2 class="wow fadeInUp white" data-wow-duration="1s">This is heading text</h2>
+              <p class="wow fadeInUp white" data-wow-duration="2s">There is now an abundance of readable dummy texts.
+                These
+                are usually used when a text is required purely to fill a space. </p>
+            </div>
+            <div class="col-md-6 wow slideInLeft" data-wow-duration="2s">
+              <a href="{% url 'product-list' %}" class="btn_1">shop now</a>
+
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img src="{% static 'img/tennis_racquet.jpg'%}" alt="Los Angeles">
+        <div class="text-box">
+          <div class="row align-items-center">
+
+            <div class="col-md-6">
+              <h2 class=" white">This is heading text</h2>
+              <p class="white">There is now an abundance of readable dummy texts.
+                These
+                are usually used when a text is required purely to fill a space. </p>
+            </div>
+            <div class="col-md-6">
+              <a href="{% url 'product-list' %}" class="btn_1">shop now</a>
+
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img src="{% static 'img/gilbert_ball.jpg'%}" alt="Chicago">
+        <div class="text-box">
+          <div class="row align-items-center">
+
+            <div class="col-md-6">
+              <h2 class=" white">This is heading text</h2>
+              <p class=" white">There is now an abundance of readable dummy texts.
+                These
+                are usually used when a text is required purely to fill a space. </p>
+            </div>
+            <div class="col-md-6">
+              <a href="{% url 'product-list' %}" class="btn_1">shop now</a>
+
+            </div>
+          </div>
+        </div>
+      </div>
+
+    </div>
+    <!-- Left and right controls -->
+    <a class="carousel-control-prev" href="#slider-animation" data-slide="prev">
+      <span class="carousel-control-prev-icon"></span>
+    </a>
+    <a class="carousel-control-next" href="#slider-animation" data-slide="next">
+      <span class="carousel-control-next-icon"></span>
+    </a>
+
+  </div>
+
+</section>
+<section class="recommended">
+  <div class="container">
+
+    <h1>Recommended Items</h1>
+
+
+    <div class="row">
+      {% for product in object_list %}
+      {% if product.is_item_recommended %}
+      <div class="col-md-3 col-sm-6">
+        <div class="product-grid4">
+          <div class="product-image4">
+            <a href="">
+              <!-- <img src="{{ product.item_brand.brand_image.url }}" alt="{{ product.item_brand.brand_name }}" width="30px"> -->
+
+              <img class="pic-1" src="{{ product.item_image.url }}" alt="{{ product.item_name }}">
+            </a>
+            <!-- <span class="product-new-label">Recommended</span> -->
+            <!-- <span class="product-discount-label">-10%</span> -->
+          </div>
+          <div class="product-content">
+            <h3 class="title"><a href="#">{{ product.item_name }}</a></h3>
+            <div class="price">
+              Kshs. {{product.item_price }}
+              <!-- <span>$16.00</span> -->
+            </div>
+            <a class="add-to-cart" href="{% url 'add-to-cart' product.slug %}">ADD TO CART</a>
+          </div>
+        </div>
+      </div>
+      {% endif %}
+      {% endfor %}
+
+    </div>
+    
+  </div>
+</section>
 
 
 {% endblock %}
