--- a/shop/templates/product/product_list.html
+++ b/shop/templates/product/product_list.html
@@ -3,7 +3,6 @@
 <div class="container">
 
 
-    <h1>View Our Products</h1>
     <nav class="product-filter">
 
         <h1>Our Products</h1>
@@ -31,24 +30,26 @@
 
         {% for product in object_list %}
         <div class="col-md-3 col-sm-6">
-            <div class="product-grid2">
-                <div class="product-image2">
-                    <a href="product/{{ product.slug }}">
-                        <img class="pic-1" src="http://bestjquery.com/tutorial/product-grid/demo3/images/img-3.jpeg">
-                        <img class="pic-2" src="http://bestjquery.com/tutorial/product-grid/demo3/images/img-4.jpeg">
-                    </a>
-                    <ul class="social">
-                        <li><a href="product/{{ product.slug }}" data-tip="Quick View"><i class="fa fa-eye"></i></a>
-                        </li>
-                    </ul>
-                    <a class="add-to-cart" href="{% url 'add-to-cart' product.slug %}"><i class="fa fa-shopping-cart"></i> Add to cart</a>
+            <div class="product-grid4">
+              <div class="product-image4">
+                <a href="">
+                  <!-- <img src="{{ product.item_brand.brand_image.url }}" alt="{{ product.item_brand.brand_name }}" width="30px"> -->
+  
+                  <img class="pic-1" src="{{ product.item_image.url }}" alt="{{ product.item_name }}">
+                </a>
+                <!-- <span class="product-new-label">Recommended</span> -->
+                <!-- <span class="product-discount-label">-10%</span> -->
+              </div>
+              <div class="product-content">
+                <h3 class="title"><a href="#">{{ product.item_name }}</a></h3>
+                <div class="price">
+                  Kshs. {{product.item_price }}
+                  <!-- <span>$16.00</span> -->
                 </div>
-                <div class="product-content">
-                    <h3 class="title"><a href="#">{{ product.item_name }}</a></h3>
-                    <span class="price">Kshs. {{ product.item_price }}</span>
-                </div>
+                <a class="add-to-cart" href="{% url 'add-to-cart' product.slug %}">ADD TO CART</a>
+              </div>
             </div>
-        </div>
+          </div>
         {% endfor %}
     </div>
 
