--- a/shop/templates/registration/registration_form.html
+++ b/shop/templates/registration/registration_form.html
@@ -5,6 +5,7 @@
   body {
     background-color: #dde5e8;
   }
+
   .container {
     height: 100%;
     align-content: center;
@@ -91,59 +92,71 @@
 
 
 <div class="container">
-    <div class="d-flex justify-content-center h-100">
-      <div class="card">
-        <div class="card-header">
-          <h3>Sign Up</h3>
-  
-        </div>
-        <div class="card-body">
-          {{ form.non_field_errors }}
-          <form method="POST">
-            {% csrf_token %}
-  
-            <div class="input-group form-group">
-                <h3>username</h3>
-              <div class="input-group-prepend">
-                <span class="input-group-text"><i class="fas fa-user"></i></span>
-              </div>
-              {{ form.username }}
-              {{ form.username.errors }}
-  
-            </div>
-            <div class="input-group form-group">
-                <h3>Password</h3>
-              <div class="input-group-prepend">
-                <span class="input-group-text"><i class="fas fa-key"></i></span>
-              </div>
-              {{ form.password1 }}
-              {{ form.password1.errors }}
-            </div>
+  <div class="d-flex justify-content-center h-100">
+    <div class="card">
+      <div class="card-header">
+        <h3>Sign Up</h3>
 
-            <div class="input-group form-group">
-                <h3>Password again</h3>
-                <div class="input-group-prepend">
-                  <span class="input-group-text"><i class="fas fa-key"></i></span>
-                </div>
-                {{ form.password2 }}
-                {{ form.password2.errors }}
-              </div>
-            <!-- <div class="row align-items-center remember">
+      </div>
+      <div class="card-body">
+        {{ form.non_field_errors }}
+        <form method="POST">
+          {% csrf_token %}
+
+          <div class="input-group form-group">
+            <h3>username</h3>
+            <div class="input-group-prepend">
+              <span class="input-group-text"><i class="fas fa-user"></i></span>
+            </div>
+            {{ form.username }}
+            {{ form.username.errors }}
+
+          </div>
+
+
+          <div class="input-group form-group">
+            <h3>Email</h3>
+            <div class="input-group-prepend">
+              <span class="input-group-text"><i class="fas fa-user"></i></span>
+            </div>
+            {{ form.email }}
+            {{ form.email.errors }}
+
+          </div>
+
+          <div class="input-group form-group">
+            <h3>Password</h3>
+            <div class="input-group-prepend">
+              <span class="input-group-text"><i class="fas fa-key"></i></span>
+            </div>
+            {{ form.password1 }}
+            {{ form.password1.errors }}
+          </div>
+
+          <div class="input-group form-group">
+            <h3>Password again</h3>
+            <div class="input-group-prepend">
+              <span class="input-group-text"><i class="fas fa-key"></i></span>
+            </div>
+            {{ form.password2 }}
+            {{ form.password2.errors }}
+          </div>
+          <!-- <div class="row align-items-center remember">
                           <input type="checkbox">Remember Me
                       </div> -->
-            <div class="form-group">
-              <input type="submit" value="Sign Up" class="btn float-right login_btn">
-            </div>
-          </form>
-        </div>
-        <div class="card-footer">
-          <div class="d-flex justify-content-center links">
-            Already have an account?<a href="{% url 'login' %}?next={{request.path}}">Log In</a>
+          <div class="form-group">
+            <input type="submit" value="Sign Up" class="btn float-right login_btn">
           </div>
-          
+        </form>
+      </div>
+      <div class="card-footer">
+        <div class="d-flex justify-content-center links">
+          Already have an account?<a href="{% url 'login' %}?next={{request.path}}">Log In</a>
         </div>
+
       </div>
     </div>
   </div>
+</div>
 
 {% endblock %}
