--- a/shop/templates/about.html
+++ b/shop/templates/about.html
@@ -1,22 +1,29 @@
 {% extends 'base.html' %}
 {% block content %}
+{% load static %}
 <div class="aboutus-section">
     <div class="container">
         <div class="row">
             <div class="col-md-3 col-sm-6 col-xs-12">
                 <div class="aboutus">
                     <h2 class="aboutus-title">About Us</h2>
-                    <p class="aboutus-text">Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat
-                        vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in.</p>
-                    <p class="aboutus-text">This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel velit
-                        auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec
-                        sagittis sem</p>
+                    <p class="aboutus-text">ZOHARI SUPPLIERS LIMITED is an online company that purposes to improve holistic health fitness by supplying high quality Sports and Gym equipment and offering Consultancy services on sports related projects.
+
+                        ZOHARI SUPPLLIERS LIMITED is registered as a private limited company under registration No. PVT-5JUDJBY incorporated 2019 under Companies Act 2015.
+                        
+                        Our structure currently comprises of two directors and several employees. Our company aims to gain distributorship to wholesalers, retailers and direct sales to clients within the local and regional market by providing high quality equipment and services.
+                        
+                        The company continuously strives to create and broaden its customer base by providing a wide array of products.
+                        
+                          Currently, ZOHARI SUPPLIERS LIMITED  has an assortment of different items majorly branded items which include but not limited to, Puma, Nike, Under Armour, Icare, Sports mania, Joerex, Gold’s Gym, Adidas, Pro-action, Molten, Misuca, Reebok, Umbro, Wilson, Dunlop, molten, Spalding, Everlast, Body Sculpture, Mikasa.
+                        
+                        </p>
                     <a class="aboutus-more" href="#">read more</a>
                 </div>
             </div>
             <div class="col-md-3 col-sm-6 col-xs-12">
                 <div class="aboutus-banner">
-                    <img src="http://themeinnovation.com/demo2/html/build-up/img/home1/about1.jpg" alt="">
+                    <img src="{% static 'img/zohari_logo.jpeg' %}" alt="">
                 </div>
             </div>
             <div class="col-md-5 col-sm-6 col-xs-12">
@@ -26,9 +33,8 @@
                             <div class="iconset">
                             </div>
                             <div class="feature-content">
-                                <h4>Work with heart</h4>
-                                <p>Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae,
-                                    eleifend ac, enim. Aliquam lorem ante, dapibus in.</p>
+                                <h4>Our Mission</h4>
+                                <p>To positively transform accessibility of high quality sports equipment and services that provide lasting solutions to our clients.</p>
                             </div>
                         </div>
                     </div>
@@ -37,9 +43,8 @@
                             <div class="iconset">
                             </div>
                             <div class="feature-content">
-                                <h4>Reliable services</h4>
-                                <p>Donec vitae sapien ut libero venenatis faucibu. Nullam quis ante. Etiam sit amet orci
-                                    eget eros faucibus tincidunt</p>
+                                <h4>Our Vision</h4>
+                                <p>To be the leading supplier of sports equipment and apparel and provide solutions to challenges affecting the growth and development of sports for our clients.</p>
                             </div>
                         </div>
                     </div>
