--- a/shop/templates/product/index.html
+++ b/shop/templates/product/index.html
@@ -35,9 +35,24 @@
   }
 
   .recommended {
-    padding-top: 60px;
+    padding-top: 220px;
     text-align: center;
   }
+
+  @media screen and (min-width:660px) {
+
+    .recommended {
+      padding-top: 30px;
+    }
+  }
+
+  @media screen and (min-width:960px) {
+
+    .recommended {
+      padding-top: 220px;
+    }
+  }
+
 
   @media screen and (max-width:650px) {
 
@@ -222,7 +237,7 @@
       {% endfor %}
 
     </div>
-    
+
   </div>
 </section>
 
