--- a/shop/templates/about.html
+++ b/shop/templates/about.html
@@ -18,7 +18,7 @@
                           Currently, ZOHARI SUPPLIERS LIMITED  has an assortment of different items majorly branded items which include but not limited to, Puma, Nike, Under Armour, Icare, Sports mania, Joerex, Gold’s Gym, Adidas, Pro-action, Molten, Misuca, Reebok, Umbro, Wilson, Dunlop, molten, Spalding, Everlast, Body Sculpture, Mikasa.
                         
                         </p>
-                    <a class="aboutus-more" href="#">read more</a>
+                    <!-- <a class="aboutus-more" href="#">read more</a> -->
                 </div>
             </div>
             <div class="col-md-3 col-sm-6 col-xs-12">
@@ -43,6 +43,7 @@
                             <div class="iconset">
                             </div>
                             <div class="feature-content">
+                                <br>
                                 <h4>Our Vision</h4>
                                 <p>To be the leading supplier of sports equipment and apparel and provide solutions to challenges affecting the growth and development of sports for our clients.</p>
                             </div>
@@ -53,9 +54,36 @@
                             <div class="iconset">
                             </div>
                             <div class="feature-content">
-                                <h4>Great support</h4>
-                                <p>Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae,
-                                    eleifend ac, enim. Aliquam lorem ante, dapibus in.</p>
+                                <br>
+                                <h4>Core Values</h4>
+                                <ul>
+                                    <li><strong>Integrity</strong> We deliver as per the agreements with our clients.</li>
+                                    <li><strong>Quality</strong> We strive to provide the best quality sports equipment and solutions to our clients without compromising.</li>
+                                    <li><strong>Innovation</strong> We incorporate the latest technological advances and trends as we offer our products and services.</li>
+                                    <li><strong>Growth</strong> We aspire to contribute to the growth of our clients through provision of quality products and services.</li>
+           
+                                </ul>
+                                
+                            </div>
+                        </div>
+                    </div>
+                    <div class="feature-box">
+                        <div class="clearfix">
+                            <div class="iconset">
+                            </div>
+                            <div class="feature-content">
+                                <br>
+                                <h4>Our Clients</h4>
+                                <p>We boast of a wide array of clients who have differing needs which we meet without compromise. </p>
+                                <br>
+                                <ul>
+                                    <li>High Schools</li>
+                                    <li>Institutions of Higher Learning</li>
+                                    <li>Physiotherapy center</li>
+                                    <li>Professional teams</li>
+                                    <li>Sports Clubs</li>
+                                    <li>Gymns and Fitness centers</li>
+                                </ul>
                             </div>
                         </div>
                     </div>
