--- a/shop/templates/contact.html
+++ b/shop/templates/contact.html
@@ -585,14 +585,16 @@ select.form-control[multiple] {
                Company:  <a href="https://zohari.herokuapp.com">Zohari Suppliers</a>
               </div>
               <div class="find-widget">
-               Address: <a href="#"> Nairobi, Kenya</a>
+               Office Location: <a href="#"> Kitengela Medical Centre, Suite 4.</a>
               </div>
               <div class="find-widget">
-                Phone:  <a href="#">+ 879-890-9767</a>
+                Phone:  <a href="tel:0727-382466">0727-382466</a>
+                Phone:  <a href="tel:0720-466137">0720-466137</a>
               </div>
               
               <div class="find-widget">
-                Website:  <a href="https://zohari.herokuapp.com">zohari.herokuapp.com</a>
+                Email:  <a href="mailto:info@zoharisuppliers.co.ke ">info@zoharisuppliers.co.ke </a>
+                Email:  <a href="mailto:zoharisuppliers@gmail.com  ">zoharisuppliers@gmail.com </a>
               </div>
               <div class="find-widget">
                  Program: <a href="#">Mon to Sat: 09:30 AM - 10.30 PM</a>
