changed email verification

--- a/shop/templates/product/index.html
+++ b/shop/templates/product/index.html
@@ -142,10 +142,8 @@
           <div class="row align-items-center">
 
             <div class="col-md-6">
-              <h2 class="wow fadeInUp white" data-wow-duration="1s">This is heading text</h2>
-              <p class="wow fadeInUp white" data-wow-duration="2s">There is now an abundance of readable dummy texts.
-                These
-                are usually used when a text is required purely to fill a space. </p>
+              <h2 class="wow fadeInUp white" data-wow-duration="1s">Looking for sports attire?</h2>
+              <p class="wow fadeInUp white" data-wow-duration="2s">You're in the right place!</p>
             </div>
             <div class="col-md-6 wow slideInLeft" data-wow-duration="2s">
               <a href="{% url 'product-list' %}" class="btn_1">shop now</a>
