--- a/shop/templates/registration/profile.html
+++ b/shop/templates/registration/profile.html
@@ -1,4 +1,6 @@
 {% extends '../base.html' %}
 {% block content %}
+<div class="container">
     <h1>Username: {{ object.username }}</h1>
+</div>
 {% endblock %}
